fix dragEl clipping bug fix

--- a/css/style.css
+++ b/css/style.css
@@ -31,11 +31,14 @@
 
   --easeOut: cubic-bezier(0, 0, 0.1, 1);
 
+  --black100: #000;
   --black: #222;
   --bg-white: #eee;
   --bg-white80: rgba(230, 230, 230, 0.8);
   --white: #fff;
-  --gray: #999;
+  --white80: rgba(255, 255, 255, 0.8);
+  --gray9: #999;
+  --gray4: #444;
   --darkGray: #333;
   --AccentBlue: #003afd;
 }
@@ -53,13 +56,12 @@
   max-width: min(2560px, 184rem);
   margin: 0 auto;
   box-sizing: border-box;
-  overflow: hidden;
 }
 
 section {
   position: relative;
   z-index: 1;
-  overflow-x: hidden;
+  overflow: visible;
   > h1 {
     display: none;
   }
@@ -113,8 +115,8 @@ section {
 /* general */
 
 ::selection {
-  background-color: #000;
-  color: #fff;
+  background-color: var(--black100);
+  color: var(--white);
 }
 
 html {
@@ -455,7 +457,7 @@ header.mobile-active .mob-header {
   }
   span {
     display: block;
-    color: var(--gray);
+    color: var(--gray9);
   }
 }
 .sec-about .box-2 {
@@ -503,7 +505,7 @@ header.mobile-active .mob-header {
   }
 
   .date {
-    color: var(--gray);
+    color: var(--gray9);
     font-size: var(--font-Body-L);
   }
 }
@@ -596,7 +598,7 @@ header.mobile-active .mob-header {
       margin: 0 0 1rem 0.4rem;
       font-weight: 700;
       line-height: 1;
-      color: var(--gray);
+      color: var(--gray9);
     }
     .work-name {
       font-size: var(--font-Heading-L);
@@ -630,7 +632,7 @@ header.mobile-active .mob-header {
       font-weight: bold;
 
       background-color: var(--black);
-      color: rgba(255, 255, 255, 0.8);
+      color: var(--white80);
 
       transition: all 0.6s var(--easeOut);
 
@@ -732,17 +734,17 @@ footer .grid-box {
       color: #e92b0f;
 
       &::after {
-        background-color: #fff;
+        background-color: var(--white);
       }
     }
   }
 
   .btn:nth-child(5) {
     a:hover {
-      color: #fff;
+      color: var(--white);
 
       &::after {
-        background-color: #000;
+        background-color: var(--black100);
       }
     }
   }
@@ -753,7 +755,7 @@ footer .grid-box {
       background-clip: text;
       -webkit-background-clip: text;
       &::after {
-        background-color: #fff;
+        background-color: var(--white);
       }
     }
   }
@@ -805,6 +807,10 @@ footer .copyright {
   opacity: 0.5;
   will-change: transform;
   transform: translate(-50%, -50%);
+
+  @media (max-width: 768px) {
+    display: none;
+  }
 }
 
 /* loading page */
@@ -814,8 +820,8 @@ footer .copyright {
   inset: 0 0 0 0;
   max-width: 100vw;
   max-height: 100vh;
-  background-color: #000;
-  color: #fff;
+  background-color: var(--black100);
+  color: var(--white);
   padding: 4rem;
   box-sizing: border-box;
 
@@ -856,7 +862,7 @@ footer .copyright {
     stroke: none;
     margin: 0;
     padding: 0;
-    color: #fff;
+    color: var(--white);
     font-size: 2rem;
     padding-inline: 0;
     padding-block: 0;
